# workflows

./: .gitignore  LICENSE  compose.yaml  pyproject.toml
Dockerfile/: dev-requirements.txt  dev.Dockerfile  requirements-dev.txt
tests/: test_education.py
